# usecasegen-cli

./: .gitignore  .ucgenrc.toml.example  CONTRIBUTING.md  LICENSE  README.md  ideas-10.txt  index.json  pyproject.toml  ucgen-test-checklist.md  ucgen.yaml  ucgen.yaml.example
core/: data-flow.json  overview.json
knowledge/: all-knowledge.json
memory/: CONVENTIONS  HEAD  README.json  decisions.idx  mistakes.idx
memory/decisions/: D-001.json  D-002.json  D-003.json  D-004.json  D-005.json
memory/mistakes/: M-001.json
modules/: cli.json  core-modules.json  errors.json  providers-and-utils.json
preferences/: conventions.json
prompts/: all-stages.json
schema/: all-models.json
templates/: index.json
tests/: conftest.py  test_assembler.py  test_claude_integration.py  test_cli.py  test_expand.py  test_exporter_docx.py  test_generator.py  test_schema.py  test_utils.py
ucgen/: __init__.py  __main__.py  assembler.py  banner.py  claude_integration.py  cli.py  config.py  errors.py  exporter.py  exporter_docx.py  generator.py  project_runner.py  reporter.py  schema.py  theme.py  validator.py
ucgen/prompts/: stage0_discover.md  stage1_intake.md  stage2_sections.md  stage3_entities.md  system_base.md
ucgen/providers/: __init__.py  anthropic_provider.py  base.py  factory.py  ollama.py  openai_provider.py
ucgen/templates/: api.md.j2  cockburn-full.md.j2  default.md.j2  enterprise.md.j2  minimal.md.j2  report.html.j2  use_case_template.docx
ucgen/utils/: __init__.py  id_counter.py  json_extract.py  prompt_loader.py  table_formatter.py
