[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ucgen"
version = "0.2.0"
description = "CLI tool to generate Cockburn-style use case documents from natural language — works with Ollama, Anthropic, Groq, and OpenAI"
readme = "README.md"
requires-python = ">=3.11"
keywords = [
  "use case",
  "requirements",
  "cockburn",
  "documentation",
  "cli",
  "llm",
  "ollama",
  "anthropic",
  "groq",
  "business analyst",
  "requirements engineering",
  "natural language",
]
dependencies = [
  "typer[all]>=0.12",
  "httpx>=0.27",
  "anthropic>=0.30",
  "openai>=1.40",
  "pydantic>=2.7",
  "jinja2>=3.1",
  "rich>=13.7",
  "aiofiles>=23.0",
  "python-docx>=1.1.0",
  "tomli-w>=1.0",
]

[project.optional-dependencies]
project = ["PyYAML>=6.0"]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-mock>=3.12",
  "ruff>=0.5",
  "mypy>=1.10",
  "types-PyYAML>=6.0",
]
all = [
  "PyYAML>=6.0",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-mock>=3.12",
  "ruff>=0.5",
  "mypy>=1.10",
  "types-PyYAML>=6.0",
]

[project.scripts]
ucgen = "ucgen.cli:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"

[[tool.mypy.overrides]]
module = "ucgen.exporter_docx"
disable_error_code = ["attr-defined"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
